<resources>
    <string name="app_name">Food Share</string>

    <!-- Common Words -->
    <string name="common_donor">Donor</string>
    <string name="common_recipient">Recipient</string>
    <string name="common_name">Name</string>
    <string name="common_email">Email Address</string>
    <string name="common_password">Password</string>
    <string name="common_phone_number">Phone Number</string>
    <string name="common_postal_code">Postal Code</string>
    <string name="common_postal_address">Postal Address</string>
    <string name="common_register">Register</string>
    <string name="common_login">Login</string>
    <string name="common_logout">Logout</string>
    <string name="common_hello_comma">Hello</string>
    <string name="common_food_items">Food Items</string>
    <string name="common_food_name">Food Name</string>
    <string name="common_category">Category</string>
    <string name="common_quantity">Quantity</string>
    <string name="common_expiry_date">Expiration Date</string>
    <string name="common_available_from">Available From</string>
    <string name="common_available_to">Available Until</string>
    <string name="common_free">Free</string>
    <string name="common_discounted_price">Discounted</string>
    <string name="common_dollar_prefix">$</string>
    <string name="common_price">Price</string>
    <string name="common_pick_up">Pick Up</string>
    <string name="common_delivery">Delivery</string>
    <string name="common_create">Create</string>
    <string name="common_update">Update</string>
    <string name="common_delete">Delete</string>
    <string name="common_request">Request</string>
    <string name="common_requests">Requests</string>
    <string name="common_approve">Approve</string>
    <string name="common_decline">Decline</string>
    <string name="common_complete">Complete</string>
    <string name="common_remind">Remind</string>
    <string name="common_reminders">Reminders</string>
    <string name="common_edit_profile">Edit Profile</string>
    <string name="common_status">Status</string>
    <string name="common_availability">Availability</string>
    <string name="rebite">Rebite</string>

    <!-- Register -->
    <string name="register_btn_upload_img">Upload Optional Profile Image</string>
    <string name="register_toast_rd_not_selected">Please select Donor or Recipient</string>
    <string name="register_toast_register_failed">Registration Failed</string>
    <string name="register_toast_invalid_form">Please input valid values</string>
    <string name="register_txt_title">Create Account</string>
    <string name="register_choice">Register As A</string>

    <!-- Profile Edit -->
    <string name="profile_edit_txt_title">View/Edit Profile</string>
    <string name="profile_btn_upload_img">Change Profile Image</string>


    <!-- Login -->
    <string name="login_toast_login_failed">Login Failed</string>
    <string name="login_txt_welcome">Welcome</string>
    <string name="login_txt_message">Sign into Rebite</string>
    <string name="login_txt_register">Don\'t have an account? Sign Up Now</string>

    <!-- Donor Home -->
    <string name="donor_home_btn_view_requests">View Requests</string>
    <string name="donor_home_btn_new_food">Create a new donation</string>
    <string name="donor_home_btn_list_food_items">Donation items</string>
    <string name="donor_home_btn_view_history">Donation History</string>

    <!-- New Food -->
    <string name="new_food_txt_title">New Donation</string>
    <string name="new_food_btn_upload_img">Upload Food Image</string>

    <!-- Edit Food -->
    <string name="edit_food_txt_title">Manage Donation</string>
    <string name="edit_food_btn_upload_img">Change Food Image</string>
    <string name="edit_food_txt_price">Choose your pricing option</string>
    <string name="edit_food_txt_type">Choose order type</string>

    <!-- Donor Readonly Food item -->
    <string name="donor_readonly_food_item_title">View Donation</string>
    <string name="donor_readonly_food_item_subtitle">Review the details of your contribution</string>

    <!-- Recipient Home -->
    <string name="recipient_home_btn_search">Search Donations</string>
    <string name="recipient_home_btn_nearby">Nearby Donations</string>
    <string name="recipient_home_btn_view_requests">View Requests</string>
    <string name="recipient_home_btn_view_request_history">Request History</string>

    <!-- Nearby Food Items -->
    <string name="nearby_food_txt_nearby">Nearby Donations</string>
    <string name="nearby_food_no_items">No nearby donations found at the moment.</string>
    <string name="nearby_food_subtitle">Discover available donations in your immediate area</string>

    <!-- Recipient Food Detail -->
    <string name="recipient_food_detail_title">Donation Detail</string>
    <string name="recipient_food_detail_request_item">Request This Item</string>

    <!-- Donor Food History -->
    <string name="donor_food_item_history_title">Donation History</string>
    <string name="donor_food_item_history_subtitle">Review your past contributions and shared impact</string>

    <!-- Donor Food List -->
    <string name="donor_food_item_list_subtitle">Manage and update your active food listings</string>

    <!-- Donor Request Details -->
    <string name="donor_request_details_title">Request Details</string>

    <!-- Recipient Request Details -->
    <string name="recipient_request_details_title">Request Details</string>

    <!-- Recipient Search Food Items -->
    <string name="recipient_food_items_search_title">Search Donations</string>
    <string name="recipient_food_items_search_search_hint">🔎Search</string>
    <string name="recipient_food_items_search_subtitle">Find surplus food shared by donors near you</string>

    <!-- Recipient Request History -->
    <string name="recipient_request_history_title">Request History</string>
</resources>