<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/registerTxtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/register_txt_title"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_choice"
            android:gravity="center"
            android:layout_marginTop="30dp"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="50dp"
            android:orientation="horizontal"
            android:gravity="center" >

            <RadioButton
                android:id="@+id/rdDonor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/common_donor"
                android:layout_weight="1"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/rdRecipient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/common_recipient"
                android:layout_weight="1"
                android:gravity="center"/>
        </RadioGroup>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:ems="10"
            android:hint="@string/common_name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:ems="10"
            android:hint="@string/common_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:ems="10"
            android:hint="@string/common_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:ems="10"
            android:hint="@string/common_phone_number"
            android:inputType="phone"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/inputPostalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:ems="10"
            android:hint="@string/common_postal_code"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/inputPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:ems="10"
            android:hint="@string/common_postal_address"
            android:inputType="text"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnUploadProfileImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="80dp"
            android:layout_marginVertical="15dp"
            android:text="@string/register_btn_upload_img"
            android:textStyle="bold"
            android:backgroundTint="#3a5432"
            android:textColor="#FFB6C1"
            android:onClick="pickPhoto"
            app:cornerRadius="15dp"/>

        <TextView
            android:id="@+id/txtSelectedPhotoUri"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:paddingVertical="15dp"
            android:textStyle="bold"
            android:textColor="#FFB6C1"
            android:text="@string/common_register"
            android:onClick="handleRegister"
            android:backgroundTint="#3a5432"
            app:cornerRadius="15dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>