<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.NewFoodActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:textSize="34sp"
                android:text="@string/new_food_txt_title" />

            <EditText
                android:id="@+id/inputFoodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:ems="10"
                android:hint="@string/common_food_name"
                android:inputType="text"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spinnerFoodCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:minHeight="48dp"
                android:prompt="@string/common_category"
                />

            <EditText
                android:id="@+id/inputFoodCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:ems="10"
                android:hint="@string/common_category"
                android:inputType="text"
                android:minHeight="48dp" />
            <EditText
                android:id="@+id/inputFoodQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:ems="10"
                android:hint="@string/common_quantity"
                android:inputType="text"
                android:minHeight="48dp" />
            <EditText
                android:id="@+id/inputFoodExpiry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:ems="10"
                android:hint="@string/common_expiry_date"
                android:inputType="date"
                android:minHeight="48dp" />
            <EditText
                android:id="@+id/inputAvailableFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:ems="10"
                android:hint="@string/common_available_from"
                android:inputType="datetime"
                android:minHeight="48dp" />
            <EditText
                android:id="@+id/inputAvailableTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:ems="10"
                android:hint="@string/common_available_to"
                android:inputType="datetime"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:id="@+id/imgUploadPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="50dp"
                    android:maxWidth="50dp"/>
                <Button
                    android:id="@+id/btnUploadFoodImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/new_food_btn_upload_img"
                    android:onClick="pickPhoto"/>

            </LinearLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="50dp">

                <RadioButton
                    android:id="@+id/rdFree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/common_free" />

                <RadioButton
                    android:id="@+id/rdDiscounted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/common_discounted_price" />
            </RadioGroup>
            <EditText
                android:id="@+id/inputPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="5dp"
                android:ems="10"
                android:hint="@string/common_price"
                android:inputType="numberDecimal"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkPickup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:text="@string/common_pick_up" />

                <CheckBox
                    android:id="@+id/chkDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:text="@string/common_delivery" />
            </LinearLayout>

            <Button
                android:id="@+id/btnCreateFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/common_create"
                android:onClick="handleCreate"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>