<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.EditProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtEditProfileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/profile_edit_txt_title" />

        <TextView
            android:id="@+id/txtUserType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:gravity="start">
            <TextView
                android:id="@+id/lblName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="right"
                android:textSize="20sp"
                android:text="@string/common_name"/>
            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:ems="10"
                android:hint="@string/common_name"
                android:inputType="text"
                android:textSize="24sp"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:gravity="start">
            <TextView
                android:id="@+id/lblEmail"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="right"
                android:textSize="20sp"
                android:text="@string/common_email"/>
            <TextView
                android:id="@+id/txtUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"

                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:gravity="start">
            <TextView
                android:id="@+id/lblPhone"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="right"
                android:textSize="20sp"
                android:text="@string/common_phone_number"/>
            <EditText
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:ems="10"
                android:hint="@string/common_phone_number"
                android:inputType="phone"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:gravity="start">
            <TextView
                android:id="@+id/lblPostalCode"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="right"
                android:textSize="20sp"
                android:text="@string/common_postal_code"/>
            <EditText
                android:id="@+id/inputPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:ems="10"
                android:hint="@string/common_postal_code"
                android:inputType="text"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:gravity="start">
            <TextView
                android:id="@+id/lblPostalAddress"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:gravity="right"
                android:textSize="20sp"
                android:text="@string/common_postal_address"/>
            <EditText
                android:id="@+id/inputPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:ems="10"
                android:hint="@string/common_postal_address"
                android:inputType="text"
                android:minHeight="48dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgUploadPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="150dp"
            android:maxWidth="150dp"/>
        <Button
            android:id="@+id/btnUploadProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/profile_btn_upload_img"
            android:onClick="pickPhoto"/>

        <Button
            android:id="@+id/btnSaveUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/common_update"
            android:onClick="handleSaveUser"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>